# remoteDeckel

./: .clever.json  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  diesel.toml  readme.md  rocket.toml
migrations/2020-06-07-140325_create_users/: up.sql
migrations/2020-06-20-202703_create_users/: up.sql
migrations/2020-07-03-201646_create_payments/: up.sql
migrations/2020-07-04-185618_create_payments/: up.sql
migrations/2020-07-17-202002_alter_payments/: down.sql  up.sql
src/: bin.rs  bot_context.rs  bot_types.rs  db.rs  lib.rs  main.rs  messages.rs  models.rs  payments.rs  schema.rs  stripe_types.rs  telegram_types.rs
src/src/: schema.rs
