[package]
name = "deckel-bot"
version = "0.1.2"
authors = ["nilSinger <niilz@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bot_lib"
path = "src/lib.rs"

[[bin]]
name = "deckel_bot"
path = "src/bin.rs"

[dependencies]
rocket = "0.4.5"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = {version = "0.2", features = ["full"] }
diesel = {version = "1.4.4", features = ["postgres", "chrono"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dependencies.chrono]
version = "0.4"

